<resources>

    <string name="app_name">HubbaHubba</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title"> Hubba Hubba</string>
    <string name="logIn"> Log In</string>
    <string name="signUp"> Sign Up</string>
    <string name="facebook"> facebook </string>
    <string name="viewMap"> View Map</string>
    <string name="listViewHubba"> List View Hubba</string>
    <string name="listViewComments">List View Comments</string>
    <string name="addLocation">Add Location</string>
    <string name="spotPage">Spot Page</string>
    <string name="listViewFavorites">List View Favorites</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="rememberPassword">Remember Password</string>
    <string name="title_activity_log">Log</string>
    <string name="back">Back</string>
    <string name="difficulty">Difficulty:</string>
    <string name="dangerLevel">Police:</string>
    <string name="overallRating">Overall:</string>
    <string name="comments">Comments:</string>
    <string name="commentHint">Landing, materials, hazzards, etc.</string>
    <string name="addSpot">Add Spot</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="showOff">Show Off:</string>
    <string name="browseButton">Browse</string>
    <string name="browseBar">Upload File</string>
    <string name="locateOnMap">Locate on Map</string>
    <string name="address">Address*</string>
    <string name="cityStateZip">City, State, Zip*</string>
    <string name="spotTitle">Spot Title*</string>
    <string name="cancel">Cancel</string>
    <string name="continu">Continue</string>

    <!-- Array of Types of Spots -->

    <string-array name="spotTypes">
        <item>Hubba</item>
        <item>Handrail</item>
        <item>Flat Rail</item>
        <item>Ledge(s)</item>
        <item>Transition</item>
        <item>Gap</item>
        <item>Stairs</item>
        <item>Skate Park</item>
        <item>Bank</item>
        <item>Pool</item>
        <item>Other</item>
    </string-array>

    <string name="spinnerPrompt">Spot Type</string>
    <!-- End of Array for Types of Spots -->

    <string name="hubba">Hubbas</string>
    <string name="handrail">Handrails</string>
    <string name="flatRail">Flat Rails</string>
    <string name="ledge">Ledges</string>
    <string name="transition">Transitions</string>
    <string name="gap">Gaps</string>
    <string name="stair">Stairs</string>
    <string name="skatePark">Skate Parks</string>
    <string name="bank">Banks</string>
    <string name="pool">Pool</string>
    <string name="shop">Shops</string>
    <string name="Name">First and Last Name</string>
    <string name="email">Email</string>
    <string name="keepLoggedIn">Keep Me Logged In</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="listView">List View</string>
    <string name="add">add</string>
    <string name="searchSpots">Search Spots</string>
    <string name="show">Show...</string>
    <string name="titleOfSpot">Spot Title Here</string>
    <string name="txtPolice">50 Level</string>
    <string name="txtDiff">Difficulty Level</string>
    <string name="uploadPhoto">Upload</string>
    <string name="favorites">Favorites</string>
    <string name="txtOverall">Overall</string>
    <string name="miles">mi</string>
    <string name="search">Search</string>
    <string name="layers">Lyers</string>

    <!-- riley strings -->
    <string name="riley">Riley</string>

    <string-array name="pageTitle">
        <item>Map View</item>
        <item>List View</item>
        <item>My Spots</item>
    </string-array>

    <string name="title_activity_action_bar">ActionBarActivity</string>
    <string name="title_activity_list_view_hubba">ListViewHubba</string>
    <string name="title_activity_custom_list_view_adapter">CustomListViewAdapter</string>
    <string name="title_activity_add_location">AddLocation</string>
    <string name="title_activity_add_spot">AddSpot</string>
    <string name="title_activity_spot_page">SpotPage</string>
    <string name="title_activity_image_adapter">ImageAdapter</string>
    <string name="title_activity_custom_list_view_adapter_comments">CustomListViewAdapterComments</string>
    <string name="title_activity_list_view_comments">ListViewComments</string>
    <string name="title_activity_custom_list_view_adapter_favorites">CustomListViewAdapterFavorites</string>
    <string name="title_activity_list_view_favorites">ListViewFavorites</string>

</resources>